--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,9 @@
     "cSpell.words": [
         "Crosbie's",
         "customise",
+        "EXIF",
         "optimised",
+        "sjlewis",
         "unmanaged"
     ]
 }
